# Nexus

./: .cleanup-alerts.txt  .env.example  .eslintrc.json  .gitattributes  .gitignore  .gitleaks.toml  .npmrc  .prettierignore  .trivyignore  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEPLOYMENT.md  FUTURE_CONTRIBUTION.md  FUTURE_PLAN.md  GOVERNANCE.md  LICENSE  MAINTAINERS.md  Makefile  NEXT_PLAN.md  NOTICE  PLAN.md  README.md  RESUME.md  ROADMAP.md  SECURITY.md  STUBS.md  TODO.md  commitlint.config.js  devbox.json  docker-compose.yml  eslint.config.js  fly.toml  knip.json  next_move.md  openapi.yaml  package-lock.json  package.json  playwright.config.ts  pnpm-lock.yaml  (+9 more)
.claude/: CONDUCTOR_RUNTIME_CONSOLIDATION.md  NEXUS_DRIVE_SANDBOX.md  PARALLEL_AGENTS.md  settings.json
.devcontainer/: devcontainer.json
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml  renovate.json
db/: migrate.ts
docker/: Dockerfile  README.md  docker-compose.federation.yaml  docker-compose.floci.yaml
docs/: ARCHITECTURE.md  BENCHMARKS.md  DEPLOYMENT.md  FEATURES.md  TESTING.md  TROUBLESHOOTING.md  cli-reference.md  plugin-author-guide.md  runbook.md  slos.md  struck-repos.md
runtime/: bridge-manager.ts  e2e-federation.ts
scripts/: check-license-headers.ts  dev-setup.sh  generate-clients.ts  scaffold.ts
services/ingest/: Dockerfile  README.md  docker-compose.yml  pyproject.toml
services/ingest/src/nexus_ingest/: __init__.py  api.py  auth.py  celery_app.py  db.py  models.py  queue.py  settings.py
services/ingest/src/nexus_ingest/routes/: scrape.py
services/ingest/src/nexus_ingest/scrapers/: __init__.py  registry.py
services/ingest/src/nexus_ingest/tasks/: __init__.py  crawl_url.py  index_document.py  run_inference.py
services/ingest/tests/: conftest.py  test_auth.py  test_celery_tasks.py  test_health.py  test_scrape.py
tests/: circuit-breaker.test.ts  e2e-convergence.test.ts  e2e-federation.test.ts  environment-integration.test.ts  federation-health-controller.test.ts  floci-client.test.ts  ghoststack-config.test.ts  governance-engine.test.ts  governed-planning.test.ts  health.test.ts  path-boundary.test.ts  (+5 more)
(+640 files in other folders)
