# SPDX-License-Identifier: Apache-2.0
[project]
name = "nexus-ingest"
version = "0.0.0"
description = "NEXUS ingest service — financial scraping + analysis (ex-fin-scrape)"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.31.0",
  "pydantic>=2.9.0",
  "pydantic-settings>=2.5.0",
  "httpx>=0.27.0",
  "psycopg[binary]>=3.2.0",
  "opentelemetry-api>=1.27.0",
  "opentelemetry-sdk>=1.27.0",
  "opentelemetry-exporter-otlp>=1.27.0",
  "prometheus-client>=0.21.0",
  "finscrape @ file:../../../fin-scrape",
  "redis[hiredis]>=5.0.0",
  "asyncpg>=0.29.0",
]
[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
  "pytest-asyncio>=0.24.0",
  "hypothesis>=6.112.0",
  "schemathesis>=3.34.0",
  "mypy>=1.11.0",
  "ruff>=0.6.0",
]
[tool.ruff]
line-length = 100
[tool.mypy]
strict = true
python_version = "3.11"
[tool.pytest.ini_options]
asyncio_mode = "auto"

